# fluxt

./: .coveragerc  .gitignore  LICENSE  README.md  example.py  main.py  mkdocs.yml  requirements.txt  run_example.py  setup.cfg
.github/workflows/: pytest.yaml
docs/: index.md
examples/: basic_map.py  basic_reduce.py  kafka_example.py  multi_processing.py  page_clicks.py  word_count.py  word_count_file.py
examples/data/: lorem_ipsum.txt
fluxt/: __init__.py  batch.py  cli.py  globals.py  operation.py  state.py  transaction.py
fluxt/app/: __init__.py  app.py  datastream.py  events.py  graph.py  operations.py
fluxt/cli/: __init__.py  cli.py
fluxt/core/: __init__.py  app.py  datastream.py  executors.py  graph.py
fluxt/operations/: __init__.py  base.py  filter.py  flat_map.py  key.py  map.py  reduce.py
fluxt/serialization/: encoders.py  types.py
fluxt/sinks/: __init__.py  file.py  stdout.py
fluxt/sources/: __init__.py  base.py  collection.py  file.py  kafka_source.py
fluxt/storage/: __init__.py  base.py  level.py  local.py  memory.py  rocks.py
fluxt/table/: __init__.py  table.py
streaming/: __init__.py
streaming/app/: __init__.py  app.py  datastream.py  events.py  graph.py  operations.py
streaming/operations/: __init__.py  base.py  filter.py  flat_map.py  key.py  map.py  reduce.py
streaming/sinks/: __init__.py  base.py  file.py  stdout.py
streaming/sources/: __init__.py  base.py  collection.py  file.py  kafka_source.py
streaming/storage/: __init__.py  local.py  memory.py
tests/: test_operation.py
tests/app/: test_app.py  test_graph.py  (+1 more)
(+17 files in other folders)
