[metadata]
name = fluxt
version = attr:fluxt.__version__
description = A python native stateful streaming framework
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords = streaming events processing
author = Samuel Hornsey
author_email = hello@samuelhornsey.com
url = https://github.com/SamuelHornsey/fluxt
project_urls =
    Bug Reports = https://github.com/SamuelHornsey/fluxt/issues
    Repository = https://github.com/SamuelHornsey/fluxt

[options]
packages = find:
python_requires = >=3.7
install_requires =
    kafka-python==2.0.2

[options.extras_require]
test =
    pytest
    coverage